force-app/main/default/objects/StudentMarks__c/StudentMarks__c.object-meta.xml
<CustomObject>
    <label>StudentMarks</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StudentMarks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>