force-app/main/default/objects/StudentMarks__c/fields/handyUni__c.field-meta.xml
<CustomField>
    <fullName>handyUni__c</fullName>
    <formula>StudentMaster__r.UNI__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>handyUni</label>
    <type>Text</type>
</CustomField>