force-app/main/default/objects/StudentMarks__c/fields/MarksStudent__c.field-meta.xml
<CustomField>
    <fullName>MarksStudent__c</fullName>
    <label>MarksStudent</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>