force-app/main/default/objects/StudentMarks__c/fields/StudentMaster__c.field-meta.xml
<CustomField>
    <fullName>StudentMaster__c</fullName>
    <label>StudentMaster</label>
    <referenceTo>StudentMaster__c</referenceTo>
    <relationshipLabel>StudentMarks</relationshipLabel>
    <relationshipName>StudentMarks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>