force-app/main/default/objects/StudentMarks__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MarksStudent__c</columns>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Year__c</columns>
    <columns>handyUni__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>